[package]
name = "harvester-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
